src/objects/PearsonCourseStructure__c.object
<CustomObject>
    <description>Pearson marketing segment codes like discipline, cluster, course</description>
    <fields>
        <fullName>Active_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Pearson course code is active or inactive.</description>
        <inlineHelpText>Indicates if the Pearson course code is active or inactive.</inlineHelpText>
        <label>Active Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>IF( Text( Parent_Pearson_Course_Structure__r.Type__c ) = &quot;Cluster&quot;, Parent_Pearson_Course_Structure__r.Name,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created For Requirement 311.</description>
        <label>Current Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataHub_Key__c</fullName>
        <externalId>true</externalId>
        <label>DataHub Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <formula>IF( Text(Type__c) = &quot;Discipline&quot;, &quot;&quot;, IF (Text(Parent_Pearson_Course_Structure__r.Type__c) = &quot;Cluster&quot;, IF( Text( Parent_Pearson_Course_Structure__r.Parent_Pearson_Course_Structure__r.Type__c ) = &quot;Discipline&quot;, Parent_Pearson_Course_Structure__r.Parent_Pearson_Course_Structure__r.Name , &quot;&quot;),IF( Text( Parent_Pearson_Course_Structure__r.Type__c ) = &quot;Discipline&quot;, Parent_Pearson_Course_Structure__r.Name , &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discipline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GHEPM_Course_Code__c</fullName>
        <label>GHEPM Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Pearson_Course_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered Lookup for the Parent Course Structure of a Cluster and/or Course.</description>
        <inlineHelpText>A parent must be a higher level in the Pearson Course Structure (E.g Course can&apos;t be be the parent of a Cluster)</inlineHelpText>
        <label>Parent Pearson Course Structure</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <value>Course</value>
            </filterItems>
            <filterItems>
                <field>PearsonCourseStructure__c.Type__c</field>
                <operation>equals</operation>
                <value>Discipline, Cluster</value>
            </filterItems>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <value>Cluster</value>
            </filterItems>
            <filterItems>
                <field>PearsonCourseStructure__c.Type__c</field>
                <operation>equals</operation>
                <value>Discipline</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PearsonCourseStructure__c</referenceTo>
        <relationshipLabel>Pearson Course Structure</relationshipLabel>
        <relationshipName>Pearson_Course_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pearson_Course_Structure_Code__c</fullName>
        <description>Contains the code of the Pearson course structure.</description>
        <externalId>true</externalId>
        <inlineHelpText>Contains the code of the Pearson course structure.</inlineHelpText>
        <label>Pearson Course Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Course_Structure_Name__c</fullName>
        <description>Description for the Pearson course structure.</description>
        <inlineHelpText>Description for the Pearson course structure.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Requirement 311.</description>
        <label>Prior Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describes the type of the record.</description>
        <inlineHelpText>Describes the type of the record.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Discipline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pearson Course Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active_Indicator__c</columns>
        <columns>Parent_Pearson_Course_Structure__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Pearson_Course_Structure_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EDU</fullName>
        <columns>Active_Indicator__c</columns>
        <columns>Pearson_Course_Structure_Code__c</columns>
        <columns>Pearson_Course_Structure_Name__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Education</value>
        </filters>
        <label>EDU</label>
    </listViews>
    <nameField>
        <label>Pearson Course Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pearson Course Structure</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_HEUK_NeedParentForClusterOrCourse</fullName>
        <active>false</active>
        <description>Course or Cluster type Pearson structure should have a parent.</description>
        <errorConditionFormula>OR (AND ( Text(Type__c) = &quot;Cluster&quot;, ISBLANK(Parent_Pearson_Course_Structure__c)), 
AND ( Text(Type__c) = &quot;Course&quot;, ISBLANK(Parent_Pearson_Course_Structure__c)))</errorConditionFormula>
        <errorDisplayField>Parent_Pearson_Course_Structure__c</errorDisplayField>
        <errorMessage>This record needs to be linked to a parent course structure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_HEUK_ParentNotNeededForDiscipline</fullName>
        <active>false</active>
        <description>Discipline does not have a parent linked to it.</description>
        <errorConditionFormula>TEXT( Type__c ) = &apos;Discipline&apos; &amp;&amp; NOT ISBLANK( Parent_Pearson_Course_Structure__c )</errorConditionFormula>
        <errorDisplayField>Parent_Pearson_Course_Structure__c</errorDisplayField>
        <errorMessage>A discipline cannot have a parent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_HEUK_ValidateParentForClusterOrCourse</fullName>
        <active>false</active>
        <description>The parent of a Course should be a Cluster or Discipline and that of a Cluster should be a Discipline.</description>
        <errorConditionFormula>(Text(Type__c) = &quot;Cluster&quot; &amp;&amp; Text( Parent_Pearson_Course_Structure__r.Type__c) &lt;&gt; &quot;Discipline&quot;) || (Text(Type__c) = &quot;Course&quot; &amp;&amp; (Text( Parent_Pearson_Course_Structure__r.Type__c) &lt;&gt; &quot;Cluster&quot; &amp;&amp; Text( Parent_Pearson_Course_Structure__r.Type__c) &lt;&gt; &quot;Discipline&quot;) )</errorConditionFormula>
        <errorDisplayField>Parent_Pearson_Course_Structure__c</errorDisplayField>
        <errorMessage>The parent of a Course should be a Cluster or Discipline and that of a Cluster should be a Discipline.</errorMessage>
    </validationRules>
</CustomObject>